Ignore document changes for Workflows

--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -2,8 +2,8 @@ name: Unit Tests
 
 on:
   push:
-    branches:
-    - 'firmware**'
+    paths-ignore:
+      - '**.md'
   pull_request:
     paths:
     - 'builddefs/**'
