--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,6 @@ quantum/version.h
 
 # Old-style QMK Makefiles
 /keyboards/*/Makefile
-!/keyboards/ergodox_ez/
-!/keyboards/planck/
 
 # Eclipse/PyCharm/Other IDE Settings
 *.iml
@@ -84,6 +82,10 @@ user_song_list.h
 /util/win_downloaded
 /users/
 /layouts/
+/keyboards/
+!/keyboards/ergodox_ez/
+!/keyboards/planck/
+!/keyboards/moonlander/
 
 # clangd
 compile_commands.json
